# aarapsi_offrobot_ws

./: .gitignore  .gitmodules  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/aarapsi_intro_pack/: CMakeLists.txt  package.xml  setup.py
src/aarapsi_intro_pack/cfg/: dual_robot_localization.yaml  robot_localization.yaml
src/aarapsi_intro_pack/cfg/ref/: control.yaml  robot_localization.yaml
src/aarapsi_intro_pack/cfg/svm_models/: svmmodel_20230308.npz
src/aarapsi_intro_pack/launch/: robot_localization_only.launch  vpr_monitor.launch  vpr_primer_single.launch  vpr_primer_split.launch  vpr_pyplot_monitor.launch  vprp_bokeh.launch  vprp_bokeh_dual.launch  vprp_bokeh_single.launch  vprp_multi_bokeh.launch  vprp_multi_bokeh_child.launch  vprp_pyplot_single.launch
src/aarapsi_intro_pack/msg/: CompressedImageDetails.msg  CompressedImageLabel.msg  CompressedImageLabelStamped.msg  CompressedMonitorDetails.msg  Heartbeat.msg  ImageDetails.msg  ImageLabel.msg  ImageLabelStamped.msg  ImageStructure.msg  LabelDetails.msg  MonitorDetails.msg
src/aarapsi_intro_pack/nodes/: param_watcher.py  repeater.py
src/aarapsi_intro_pack/scripts/: odom_image_processor.py  odom_multiimage_processor.py  test_script.py  vpr_all_in_one.py  vpr_cruncher.py  vpr_monitor.py  vpr_plotter.py  vpr_simple.py
src/aarapsi_intro_pack/scripts/image_processors/: odom_image_processor.py  odom_multifeed_processor.py  odom_multiimage_processor.py  pos_multifeed_processor.py  pos_singlefeed_processor.py
src/aarapsi_intro_pack/scripts/lidar/: lidar2pano.py  pcvisualise.py  pointcloudDensityIncrease.py
src/aarapsi_intro_pack/scripts/testing/: CM_test_script.py  OC_test_script.py  netvlad_hybridnet_testing.py  test_filenames.txt  test_script.py  view_vector.py
src/aarapsi_intro_pack/scripts/vpr_simple/: test_script.py  theme.yaml  vpr_all_in_one.py  vpr_all_in_one_bokeh.py  vpr_bokeh_server.py  vpr_cruncher.py  vpr_monitor.py  vpr_monitor_bokeh_.py  vpr_plotter.py
src/aarapsi_intro_pack/scripts/vpr_simple/old/: vpr_cruncher.py  vpr_plotter.py
src/aarapsi_intro_pack/src/aarapsi_intro_pack/: __init__.py  aarapsi_HybridNet_feature_extract.py  aarapsi_NetVLAD_feature_extract.py  aarapsi_feature_extract.py  vpr_feature_tool.py  vpr_plots.py  vpred_factors.py  vpred_tools.py
src/aarapsi_intro_pack/src/aarapsi_intro_pack/Patch_NetVLAD/: aarapsi_feature_extract.py  download_models.py
src/aarapsi_intro_pack/src/aarapsi_intro_pack/Patch_NetVLAD/patchnetvlad/configs/: netvlad_extract.ini
src/aarapsi_intro_pack/src/aarapsi_intro_pack/Patch_NetVLAD/patchnetvlad/dataset_imagenames/: example_imageNames_index.txt:Zone.Identifier
src/aarapsi_intro_pack/src/aarapsi_intro_pack/Patch_NetVLAD/patchnetvlad/tools/: datasets.py
src/aarapsi_intro_pack/src/aarapsi_intro_pack/core/: __init__.py  argparse_tools.py  enum_tools.py  file_system_tools.py  helper_tools.py  missing_pixel_filler.py  ros_tools.py
src/aarapsi_intro_pack/src/aarapsi_intro_pack/vpr_classes/: __init__.py  hybridnet.py  netvlad.py
src/aarapsi_intro_pack/src/aarapsi_intro_pack/vpr_simple/: __init__.py  svm_model_tool.py  vpr_feature_tool.py  vpr_image_methods.py  vpr_plots.py
src/aarapsi_intro_pack/src/aarapsi_intro_pack/vpred/: __init__.py  vpred_factors.py  vpred_tools.py
src/aarapsi_intro_pack/srv/: GetSVMField.srv
src/hdl_graph_slam/launch/: hdl_graph_slam.launch
src/hdl_localization/launch/: hdl_localization.launch
src/robot_gui_bridge/: CMakeLists.txt  package.xml
src/robot_gui_bridge/gui/: gui.html  gui.sh  material.cyan-light_blue.min.css  material.min.js  nipple.js  roslib.min.js  rosscript.js  styles.css
src/robot_gui_bridge/launch/: websocket.launch
