<?xml version="1.0"?>
<package format="2">
  <name>aarapsi_intro_pack</name>
  <version>0.1.0</version>
  <description>The aarapsi_intro_pack package</description>

  <maintainer email="claxtono@qut.edu.au">Owen Claxton (@owenclaxton-QUT)</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/QVPR/aarapsiproject</url>
  <url type="website">https://github.com/QVPR/aarapsi_offrobot_ws</url>
  <url type="website">https://github.com/QVPR/aarapsi_robot_ws</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>python3-rospkg</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>

  <build_export_depend>python3-rospkg</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-cv_bridge</exec_depend>	
  <exec_depend>python3-cv2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-stitching</exec_depend> 
  <exec_depend>python3-pathlib</exec_depend> 
  <exec_depend>python3-time</exec_depend> 
  <exec_depend>python3-matplotlib</exec_depend> 
  <exec_depend>python3-pyyaml</exec_depend>
  <exec_depend>python3-sklearn</exec_depend> <!-- pip install scikit-learn -->
  <exec_depend>python3-sklearnex</exec_depend> <!-- pip install scikit-learn-intelex -->
  <exec_depend>python3-tqdm</exec_depend>
  
  <export>
  </export>
</package>
